# easyreq

./: Cargo.toml  README.md  generate.sh  requirements.yml  template.html  test_result.txt
.github/workflows/: pages.yml
src/: lib.rs  main.rs
